# monitor

./: .gitignore  .gitmodules  README.md  docker-compose.infra.yaml  docker-compose.yaml  run.sh  test.sh
workplace/open-repo/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  pyproject.toml  requirements.txt
workplace/open-repo/.github/workflows/: cmd.yml.bk  go.yml.bk  notify.yml.bk  test.yml
workplace/open-repo/cmd/: test.go
workplace/open-repo/cmd/airflow.thienhang.com/: README.md  docker-compose.yaml  requirements.txt
workplace/open-repo/cmd/book.thienhang.com/: docker-compose.yml
workplace/open-repo/cmd/crawler.thienhang.com/: __init__.py  config  core-site.xml  crawl_data..bk  docker-compose.nam  docker-compose.yaml
workplace/open-repo/cmd/inventory.thienhang.com/: __init__.py  build.sh  setup.cfg  setup.py
workplace/open-repo/cmd/shop.thienhang.com/: config.json  docker-compose.yaml  main.go
workplace/open-repo/cmd/test.thienhang.com/: __init__.py  build.sh  dockerfile  setup.py
workplace/open-repo/docs/: index.html
workplace/open-repo/pkg/config/: base.go  config.go
workplace/open-repo/pkg/context/: context.go  trie.go
workplace/open-repo/pkg/cqrs/: app.go  basic.go
workplace/open-repo/pkg/database/: base.go  connection.go  converter.go  mssql.go  mysql.go  performer.go  postgresql.go  sqlite.go  statement.go  statement_mssql_test.go  statement_mysql_test.go  statement_postgresql_test.go  statement_sqlite_test.go  statement_test.go  types.go  types_test.go
workplace/open-repo/pkg/framework/: engine.go  framework.go
(+185 files in other folders)
